# Mysql-Data-Replication

./: README.md  requirements.txt  setup.cfg  start.py
docker/: Dockerfile
notebook/: test.ipynb
src/: check.py  config.py  data_formatter.py  db_connect.py  mysql_bin_log_read.py  mysql_bin_log_read_update.py  mysql_bin_log_replicate.py  mysql_commit_test.py  mysql_connection.py  mysql_event.py  sqlalchemy_redshift.py  start.py  test.csv  test.ipynb  valid_params_pymysqlreplication.py
src/constants/: columns.conf
src/data/: test.csv
src/misc/: dump_file.py  mysql_bin_log_read.py  redshift_connectivity.py
src/resources/: config.yaml
src/utils/: db_connect.py  logger_utils.py
tests/: test_delete_data.py  test_get_data.py  test_insert_data.py  test_update.py
