[metadata]
name = my_program
version = 1.0.0
author = Your Name
author_email = your_email@example.com
description = A brief description of your program
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your_username/my_program
license = MIT

[options]
packages = find:
install_requires =
    numpy
    pandas
    matplotlib

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    my_program = my_program.main:main

[flake8]
max-line-length = 120
ignore = E203, E266, E501, W503
exclude =
    .git,
    __pycache__,
    build,
    dist

[tool:pytest]
addopts = --verbose
testpaths =
    tests
