[metadata]
name = MYSQL_REPLICATION
version = 1.0.0
author = Mageshwaran
author_email = nmagesh984@gmail.com
description = Replicating the Mysql Trancation from binary logs to Redshift
long_description = file: README.md
long_description_content_type = ""
url = https://github.com/mageshwaran08021993/Mysql-Data-Replication
license = MIT

[options]
packages = find:
install_requires =
    mypy==0.991
    mypy-extensions==0.4.3
    mysql-replication==0.31
    pandas==1.5.2
    psycopg2==2.9.5
    PyMySQL==1.0.2
    SQLAlchemy==2.0.7
    typing_extensions==4.4.0
    pyyaml
    sqlalchemy-redshift==0.8.12

[options.packages.find]
where = src


[flake8]
max-line-length = 120
ignore = E203, E266, E501, W503
exclude =
    .git,
    __pycache__,
    build,
    dist

[tool:pytest]
addopts = --verbose
testpaths =
    tests
